New: Add the multi-language support of TrainEditor

--- a/assets/Languages/ja-JP.cfg
+++ b/assets/Languages/ja-JP.cfg
@@ -831,3 +831,16 @@ w = W
 x = X
 y = Y
 z = Z
+
+[editor]
+new = 新規作成
+open = 開く
+save = 保存
+save_as = 名前を付けて保存
+close = 閉じる
+properties_one = プロパティ (1)
+properties_two = プロパティ (2)
+acceleration = 加速度
+motor_sound = モーター音
+extended_features = 拡張機能
+extended_language = 言語
