--- a/source/TrainEditor/TrainEditor.csproj
+++ b/source/TrainEditor/TrainEditor.csproj
@@ -87,8 +87,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Translations\InterfaceStrings.cs" />
-    <Compile Include="Translations\LanguageFile.cs" />
     <EmbeddedResource Include="formEditor.resx">
       <SubType>Designer</SubType>
       <DependentUpon>formEditor.cs</DependentUpon>
@@ -127,9 +125,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\OpenBveApi\OpenBveApi.csproj">
-      <Project>{27134980-4415-4375-A564-40A9014DFA5F}</Project>
-      <Name>OpenBveApi</Name>
+    <ProjectReference Include="..\OpenBveTranslate\OpenBveTranslate.csproj">
+      <Project>{9E3A5B17-53CB-40D0-89B0-5C4AC44514E9}</Project>
+      <Name>OpenBveTranslate</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
