--- a/source/OpenBveApi/OpenBveApi.csproj
+++ b/source/OpenBveApi/OpenBveApi.csproj
@@ -80,12 +80,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime.Station.cs" />
     <Compile Include="Text.cs" />
-    <Compile Include="Textures.TextOverlay.cs" />
+    <Compile Include="Textures\Textures.TextOverlay.cs" />
     <Compile Include="Sounds.cs" />
-    <Compile Include="Textures.cs" />
-    <Compile Include="Textures.Functions.cs">
+    <Compile Include="Textures\Textures.cs" />
+    <Compile Include="Textures\Textures.Functions.cs">
       <DependentUpon>Textures.cs</DependentUpon>
     </Compile>
+    <Compile Include="Textures\Textures.OpenGLWrapMode.cs" />
     <Compile Include="Transformations.cs" />
     <Compile Include="Vector2.cs" />
     <Compile Include="Vector3.cs" />
