--- a/source/OpenBVE/OpenBve.csproj
+++ b/source/OpenBVE/OpenBve.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -389,12 +389,6 @@
     </Compile>
     <Compile Include="Graphics\Screen.cs" />
     <Compile Include="Graphics\Textures.cs" />
-    <Compile Include="Graphics\Textures.Texture.cs">
-      <DependentUpon>Textures.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Graphics\Textures.TextureOrigin.cs">
-      <DependentUpon>Textures.cs</DependentUpon>
-    </Compile>
     <Compile Include="UserInterface\formImage.cs">
       <SubType>Form</SubType>
     </Compile>
