--- a/source/OpenBveApi/OpenBveApi.csproj
+++ b/source/OpenBveApi/OpenBveApi.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime.Station.cs" />
     <Compile Include="Text.cs" />
+    <Compile Include="Textures\Textures.ClipRegion.cs" />
     <Compile Include="Textures\Textures.OpenGLTexture.cs" />
     <Compile Include="Textures\Textures.PathOrigin.cs" />
     <Compile Include="Textures\Textures.RawOrigin.cs" />
@@ -91,7 +92,10 @@
     </Compile>
     <Compile Include="Textures\Textures.OpenGLWrapMode.cs" />
     <Compile Include="Textures\Textures.BitmapOrigin.cs" />
+    <Compile Include="Textures\Textures.TextureInterface.cs" />
     <Compile Include="Textures\Textures.TextureOrigin.cs" />
+    <Compile Include="Textures\Textures.TextureParameters.cs" />
+    <Compile Include="Textures\Textures.TransparencyType.cs" />
     <Compile Include="Transformations.cs" />
     <Compile Include="Vector2.cs" />
     <Compile Include="Vector3.cs" />
