Change: Update en-US.cfg

--- a/assets/Languages/en-US.cfg
+++ b/assets/Languages/en-US.cfg
@@ -922,6 +922,8 @@ device_readhesion_device = ReAdhesionDevice:
 device_pass_alarm = PassAlarm:
 device_door_open_mode = DoorOpenMode:
 device_door_close_mode = DoorCloseMode:
+device_door_width = DoorWidth:
+device_door_max_tolerance = DoorMaxTolerance:
 device_none = None
 device_manual_switching = Manual switching
 device_automatic_switching = Automatic switching
@@ -961,4 +963,28 @@ motor_max_y_pitch = YmaxPitch:
 motor_max_y_volume = YmaxVolume:
 
 extended_note = Please note: Features found on this page may require the following minimum version of openBVE:
+
+extended_loco_brake = Locomotive Brake
+extended_loco_brake_system_type = BrakeType:
+extended_loco_brake_notches = Notches:
+extended_loco_brake_delay_up = DelayUp:
+extended_loco_brake_delay_down = DelayDown:
+extended_loco_brake_type = Type:
+extended_loco_brake_set = Set
+extended_loco_brake_none = Not fitted
+extended_loco_brake_notched_air_brake = Notched air brake
+extended_loco_brake_cl = Air brake with partial release
+extended_loco_brake_combined = Combined
+extended_loco_brake_independant = Independant
+extended_loco_brake_blocking = Blocking
+extended_delay_loco_brake_up = DelayLocoBrakeUp
+extended_delay_loco_brake_down = DelayLocoBrakeDown
+
+extended_misc = Miscellaneous Features
+extended_misc_eb = Handle behaviour on EB:
+extended_misc_eb_no = No Action
+extended_misc_eb_power = Return Power to neutral
+extended_misc_eb_reverser = Return Reverser to neutral
+extended_misc_eb_power_reverser = Return Power & Reverser to neutral
+
 extended_language = Language
