Change: Update ja-JP.cfg

--- a/assets/Languages/ja-JP.cfg
+++ b/assets/Languages/ja-JP.cfg
@@ -1,5 +1,5 @@
 ﻿; openBVE interface language configuration file
-; last updated: 2018-08-26
+; last updated: 2018-09-21
 ; by  F81_tec200, Midnight Express Ginga81(ginga81), S520
 
 [program]
@@ -838,9 +838,154 @@ open = 開く
 save = 保存
 save_as = 名前を付けて保存
 close = 閉じる
+new_message = 新しい車両データを作成する前に現在のデータを保存しますか?
+open_message = 別の車両データを開く前に現在のデータを保存しますか?
+close_message = 閉じる前に現在のデータを保存しますか?
+
 properties_one = プロパティ (1)
 properties_two = プロパティ (2)
 acceleration = 加速度
 motor_sound = モーター音
 extended_features = 拡張機能
+
+performance = 性能
+performance_deceleration = 減速度:
+performance_static_friction = 静止摩擦係数:
+performance_rolling_resistance = 転がり抵抗係数:
+performance_aerodynamic_drag = 空気抵抗係数:
+
+delay = 遅れ時間
+delay_power_up = 力行入
+delay_power_down = 力行切
+delay_brake_up = 制動込
+delay_brake_down = 制動緩
+delay_set = 設定
+delay_notch = ノッチ
+delay_save = 保存
+delay_cancel = キャンセル
+
+move = ジャーク制御
+move_jerk_power_up = 力行入:
+move_jerk_power_down = 力行切:
+move_jerk_brake_up = 電制込:
+move_jerk_brake_down = 電制緩:
+move_brake_cylinder_up = 空制込:
+move_brake_cylinder_down = 空制緩:
+
+brake = ブレーキ
+brake_type = ブレーキ方式:
+brake_control_system = ブレーキ制御方式:
+brake_control_speed = 電制速度:
+brake_smee = 電磁直通
+brake_ecb = 電気指令
+brake_cl = 自動空気
+brake_control_system_none = 無し
+brake_lock_out_valve = 締切電磁弁
+brake_delay_including_control = 遅れ込め制御
+
+pressure = 圧力
+pressure_brake_cylinder_service_max = ブレーキシリンダ圧力(常用最大):
+pressure_brake_cylinder_emergency_max = ブレーキシリンダ圧力(非常):
+pressure_main_reservoir_min = 元空気ダメ圧力(下限):
+pressure_main_reservoir_max = 元空気ダメ圧力(上限):
+pressure_brake_pipe_normal = 直通管圧力:
+
+handle = ハンドル
+handle_type = ハンドルの種類:
+handle_power_notches = 力行ノッチ段数:
+handle_brake_notches = ブレーキノッチ段数:
+handle_power_notch_reduce_steps = 戻しノッチ段数:
+handle_separated = ツーハンドル
+handle_combined = ワンハンドル
+handle_brake_notches_error_message = 抑速ブレーキが有効な場合は、ブレーキノッチは最低1以上でなければなりません。
+cab = 運転室
+cab_driver_car = 運転台付き車両:
+cab_driver_car_error_message = 運転台付き車両の数は、電動車の両数 + 付随車の両数以下の数でなければなりません。
+
+car = 車両
+car_motor_car_mass = 電動車の質量:
+car_number_of_motor_cars = 電動車の両数:
+car_trailer_car_mass = 付随車の質量:
+car_number_of_trailer_cars = 付随車の両数:
+car_length_of_a_car = 車体長:
+car_front_car_is_motor_car = 先頭車が電動車かどうか:
+car_width_of_a_car = 車体幅:
+car_height_of_a_car = 車高:
+car_center_of_gravity_height = 重心の高さ:
+car_exposed_frontal_area = 先頭車の先頭部の表面積:
+car_unexposed_frontal_area = 付随車の妻面の表面積:
+car_number_of_trailer_cars_error_message =  付随車の両数は、先頭車が電動車に設定されていない場合最低1以上必要です。
+
+device = 装置
+device_const_speed = 定速:
+device_hold_brake = 抑速:
+device_readhesion_device = 再粘着装置:
+device_pass_alarm = 誤通過防止アラーム:
+device_door_open_mode = ドア開モード:
+device_door_close_mode = ドア閉モード:
+device_door_width = ドアの幅:
+device_door_max_tolerance = 干渉物の最小幅:
+device_none = 無し
+device_manual_switching = 手動切替
+device_automatic_switching = 自動切替
+device_type_a = タイプA (直流電動機向け)
+device_type_b = タイプB (反応:遅い/衝撃:小)
+device_type_c = タイプC (反応:普通/衝撃:中)
+device_type_d = タイプD (反応:速い/衝撃:大)
+device_single = 一回発音
+device_looping = 連続発音
+device_semi_automatic = 半自動
+device_automatic = 自動
+device_manual = 手動
+
+acceleration_notch = ノッチ:
+acceleration_data = 特性
+acceleration_preview = プレビュー
+acceleration_subtract_deceleration = 走行抵抗を引く
+acceleration_max_x = x軸の最大値:
+acceleration_max_y = y軸の最大値:
+
+motor_edit = 入力モード
+motor_sound_index = 音源インデックス:
+motor_pitch = 音程
+motor_volume = 音量
+motor_sound_none = 無し
+
+motor_preview = プレビュー
+motor_y_pitch = 音程
+motor_y_volume = 音量
+motor_min_x = x軸の最小値:
+motor_max_x = x軸の最大値:
+motor_left = 左
+motor_right = 右
+motor_in = 拡大
+motor_out = 縮小
+motor_max_y_pitch = y軸の最大値(音程):
+motor_max_y_volume = y軸の最大値(音量):
+
+extended_note = 注意: このページの機能を使用するには、openBVEが次のバージョン以上である必要があります。:
+
+extended_loco_brake = 機関車のブレーキ
+extended_loco_brake_system_type = ブレーキのタイプ:
+extended_loco_brake_notches = ノッチ:
+extended_loco_brake_delay_up = 遅れ込め時間:
+extended_loco_brake_delay_down = 遅れ緩解時間:
+extended_loco_brake_type = タイプ:
+extended_loco_brake_set = 設定
+extended_loco_brake_none = 未搭載車
+extended_loco_brake_notched_air_brake = ノッチ式ブレーキ
+extended_loco_brake_cl = 自動空気ブレーキ
+extended_loco_brake_combined = 複合(効きが強い方優先)
+extended_loco_brake_independant = 単弁自弁独立型 
+extended_loco_brake_blocking = 客車からは遮断
+extended_delay_loco_brake_up = 遅れ込めノッチ時間
+extended_delay_loco_brake_down = 遅れ緩解ノッチ時間
+
+extended_misc = 追加機能
+extended_misc_eb = EB動作時のハンドルの挙動:
+extended_misc_eb_no = 何もしない
+extended_misc_eb_power = マスコンを”切”位置に戻す
+extended_misc_eb_reverser = レバーサを”切”位置に戻す
+extended_misc_eb_power_reverser =マスコンとレバーサを”切”位置に戻す
+
 extended_language = 言語
