Change: Move FileSystem to API

--- a/source/OpenBveApi/OpenBveApi.csproj
+++ b/source/OpenBveApi/OpenBveApi.csproj
@@ -70,6 +70,7 @@
   <ItemGroup>
     <Compile Include="Colors.cs">
     </Compile>
+    <Compile Include="FileSystem.cs" />
     <Compile Include="Graphics\TextAlignment.cs" />
     <Compile Include="Hosts.cs" />
     <Compile Include="Interface\Input\Commands.CommandInfo.cs" />
