--- a/source/OpenBveApi/OpenBveApi.csproj
+++ b/source/OpenBveApi/OpenBveApi.csproj
@@ -69,6 +69,8 @@
     <Compile Include="Hosts.cs" />
     <Compile Include="Math.cs" />
     <Compile Include="Objects\Damping.cs" />
+    <Compile Include="Objects\Glow.AttenuationMode.cs" />
+    <Compile Include="Objects\ObjectType.cs" />
     <Compile Include="Orientation3.cs" />
     <Compile Include="Packages.cs" />
     <Compile Include="Packages.Database.cs" />
@@ -80,7 +82,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime.Station.cs" />
     <Compile Include="Text.cs" />
+    <Compile Include="Textures\Textures.ClipRegion.cs" />
     <Compile Include="Textures\Textures.OpenGLTexture.cs" />
+    <Compile Include="Textures\Textures.PathOrigin.cs" />
+    <Compile Include="Textures\Textures.RawOrigin.cs" />
     <Compile Include="Textures\Textures.TextOverlay.cs" />
     <Compile Include="Sounds.cs" />
     <Compile Include="Textures\Textures.cs" />
@@ -88,6 +93,11 @@
       <DependentUpon>Textures.cs</DependentUpon>
     </Compile>
     <Compile Include="Textures\Textures.OpenGLWrapMode.cs" />
+    <Compile Include="Textures\Textures.BitmapOrigin.cs" />
+    <Compile Include="Textures\Textures.TextureInterface.cs" />
+    <Compile Include="Textures\Textures.TextureOrigin.cs" />
+    <Compile Include="Textures\Textures.TextureParameters.cs" />
+    <Compile Include="Textures\Textures.TransparencyType.cs" />
     <Compile Include="Transformations.cs" />
     <Compile Include="Vector2.cs" />
     <Compile Include="Vector3.cs" />
