New: Adjust to the notch directly from command option value

--- a/assets/Languages/en-US.cfg
+++ b/assets/Languages/en-US.cfg
@@ -240,6 +240,7 @@ list_type_analoghalf = Analog (half axis)
 list_type_analogfull = Analog (full axis)
 list_description = Description
 list_assignment = Assignment
+list_option = Command Option
 add = Add control
 remove = Remove control
 import = Import...
@@ -249,6 +250,7 @@ up = Move up
 down = Move down
 selection = Currently selected command
 selection_command = Command:
+selection_command_option = Command Option:
 selection_keyboard = Keyboard:
 selection_keyboard_assignment_grab = Click here to enable keyboard grab to automatically select the desired key.
 selection_keyboard_assignment_grabbing = Please press any key...
@@ -592,6 +594,9 @@ SINGLE_NEUTRAL = Moves handle toward neutral by one notch for trains with one ha
 SINGLE_BRAKE = Moves handle toward brake by one notch for trains with one handle
 SINGLE_EMERGENCY = Activates emergency brake for trains with one handle
 SINGLE_FULLAXIS = Controls power and brake for trains with one handle on a full joystick axis
+POWER_ANY_NOTCH = Adjust to the power notch directly from command option value.
+BRAKE_ANY_NOTCH = Adjust to the brake notch directly from command option value.
+HOLD_BRAKE = Hold Brake
 REVERSER_FORWARD = Moves reverser forward by one notch
 REVERSER_BACKWARD = Moves reverser backward by one notch
 REVERSER_FULLAXIS = Controls reverser on a full joystick axis
