--- a/assets/Languages/ja-JP.cfg
+++ b/assets/Languages/ja-JP.cfg
@@ -1,5 +1,5 @@
 ﻿; openBVE interface language configuration file
-; last updated: 2018-09-21
+; last updated: 2018-09-26
 ; by  F81_tec200, Midnight Express Ginga81(ginga81), S520
 
 [program]
@@ -241,6 +241,7 @@ list_type_analoghalf = アナログ (半軸)
 list_type_analogfull = アナログ (全軸)
 list_description = 説明
 list_assignment = アサイン
+list_option = コマンドオプション
 add = コントロール追加
 remove = コントロール削除
 import = 読み込み...
@@ -250,6 +251,7 @@ up = 上へ
 down = 下へ
 selection = 選択中
 selection_command = コマンド:
+selection_command_option = コマンドオプション:
 selection_keyboard = キーボード:
 selection_keyboard_assignment_grab = ここをクリックすると、キーを自動で読み取ります。
 selection_keyboard_assignment_grabbing = キーを自動読み取り中。何かキーを押してください...
@@ -594,6 +596,9 @@ SINGLE_NEUTRAL = ワンハンドル車マスコン１ノッチニュートラル
 SINGLE_BRAKE = ワンハンドル車マスコン１ノッチ制動向
 SINGLE_EMERGENCY = ワンハンドル車非常ブレーキ
 SINGLE_FULLAXIS = ワンハンドル車マスコンにジョイスティック軸全体使用
+POWER_ANY_NOTCH = マスコンをコマンドオプションに設定されたノッチに合わせる
+BRAKE_ANY_NOTCH = ブレーキをコマンドオプションに設定されたノッチに合わせる
+HOLD_BRAKE = 抑速ブレーキ
 REVERSER_FORWARD = リバーサ前
 REVERSER_BACKWARD = リバーサ後
 REVERSER_FULLAXIS = リバーサにジョイスティック軸全体使用
