--- a/assets/Languages/hu-HU.cfg
+++ b/assets/Languages/hu-HU.cfg
@@ -1,5 +1,5 @@
 ﻿; openBVE interface language configuration file
-; last updated: 2018-08-20
+; last updated: 2018-10-23
 ; by Phonteus Nevolius
 
 [program]
@@ -621,7 +621,7 @@ SECURITY_L = A biztonsági rendszer L funkciója
 CAMERA_INTERIOR = Belső kameranézetre vált
 CAMERA_EXTERIOR = Külső kameranézetre vált
 CAMERA_TRACK = Pálya kameranézetre vált
-CAMERA_FLYBY = Váltogatás különböző fly-by nézetek között
+CAMERA_FLYBY = Váltás különböző fly-by nézetek között
 CAMERA_MOVE_FORWARD = Előre mozgatja a kamerát
 CAMERA_MOVE_BACKWARD = Hátra mozgatja a kamerát
 CAMERA_MOVE_LEFT = Balra mozgatja a kamerát
@@ -640,7 +640,7 @@ CAMERA_POI_PREVIOUS = Az előző kameraálláshoz ugrik a pályán
 CAMERA_POI_NEXT = A következő kameraálláshoz ugrik a pályán
 CAMERA_RESET = Alapbeállításra állítja a kameranézeteket
 CAMERA_RESTRICTION = Kamerakorlátozás ki/be kapcsolása (belső nézetben)
-TIMETABLE_TOGGLE = Menetrendmódok váltogatása
+TIMETABLE_TOGGLE = Menetrendmódok váltása
 TIMETABLE_UP = Felfelé görgeti a menetrendet
 TIMETABLE_DOWN = Lefelé görgeti a menetrendet
 MENU_ACTIVATE = Megjeleníti a játék közbeni menüt
@@ -649,10 +649,10 @@ MENU_DOWN = Lefelé mozgatja a kurzort a játék közbeni menüben
 MENU_ENTER = A játék közbeni menüben kiválasztott parancs végrehajtása
 MENU_BACK = Visszalép a játék közbeni menüben
 MISC_CLOCK = Óra megjelenítése/elrejtése
-MISC_SPEED = Váltogatés a sebességkijelző különböző működési módjai között
+MISC_SPEED = Váltás a sebességkijelző különböző működési módjai között
 MISC_GRADIENT = Váltás különböző lejtviszony kijelzési módok között
-MISC_DIST_NEXT_STATION = Toggles through different next station remain distance display modes
-MISC_TIMEFACTOR = Váltogatás különböző időgyorsító módok közt
+MISC_DIST_NEXT_STATION = Váltás a következő állomásig visszalevő távolság kijelzésmódjai között
+MISC_TIMEFACTOR = Váltás különböző időgyorsító módok közt
 MISC_FPS = A képfrissítés értékének (fps) megjelenítése/elrejtése
 MISC_AI = Robotpilóta be/ki kapcsolása
 MISC_PAUSE = Játék közbeni szünet be/ki kapcsolása
@@ -829,3 +829,162 @@ w = W
 x = X
 y = Z
 z = Y
+
+[editor]
+new = Új
+open = Megnyitás...
+save = Mentés
+save_as = Mentés másként...
+close = Bezárás
+new_message = Do you want to save data before creating a new train?
+open_message = Do you want to save data before opening another train?
+close_message = Do you want to save data before closing?
+
+properties_one = Tulajdonságok (1)
+properties_two = Tulajdonságok (2)
+acceleration = Gyorsulás
+motor_sound = Motor hang
+extended_features = További funkciók
+
+performance = Performance
+performance_deceleration = Deceleration:
+performance_static_friction = CoefficientOfStaticFriction:
+performance_rolling_resistance = CoefficientOfRollingResistance:
+performance_aerodynamic_drag = AerodynamicDragCoefficient:
+
+delay = Delay
+delay_power_up = DelayPowerUp
+delay_power_down = DelayPowerDown
+delay_brake_up = DelayBrakeUp
+delay_brake_down = DelayBrakeDown
+delay_set = Set
+delay_notch = Notch
+delay_save = Save
+delay_cancel = Cancel
+
+move = Move
+move_jerk_power_up = JerkPowerUp:
+move_jerk_power_down = JerkPowerDown:
+move_jerk_brake_up = JerkBrakeUp:
+move_jerk_brake_down = JerkBrakeDown:
+move_brake_cylinder_up = BrakeCylinderUp:
+move_brake_cylinder_down = BrakeCylinderDown:
+
+brake = Fék
+brake_type = BrakeType:
+brake_control_system = BrakeControlSystem:
+brake_control_speed = BrakeControlSpeed:
+brake_smee = Electromagnetic straight air brake
+brake_ecb = Electro-pneumatic air brake without brake pipe
+brake_cl = Air brake with partial release feature
+brake_control_system_none = None
+brake_lock_out_valve = Closing electromagnetic valve
+brake_delay_including_control = Delay-including control
+
+pressure = Nyomás
+pressure_brake_cylinder_service_max = BrakeCylinderServiceMaximumPressure:
+pressure_brake_cylinder_emergency_max = BrakeCylinderEmergencyMaximumPressure:
+pressure_main_reservoir_min = MainReservoirMinimumPressure:
+pressure_main_reservoir_max = MainReservoirMaximumPressure:
+pressure_brake_pipe_normal = BrakePipeNormalPressure:
+
+handle = Handle
+handle_type = HandleType:
+handle_power_notches = PowerNotches:
+handle_brake_notches = BrakeNotches:
+handle_power_notch_reduce_steps = PowerNotchReduceSteps:
+handle_separated = Separated
+handle_combined = Combined
+handle_brake_notches_error_message = BrakeNotches must be at least 1 if HoldBrake is set.
+
+cab = Vezetőállás
+cab_driver_car = DriverCar:
+cab_driver_car_error_message = DriverCar must be less than NumberOfMotorCars + NumberOfTrailerCars.
+
+car = Kocsik
+car_motor_car_mass = MotorCarMass:
+car_number_of_motor_cars = NumberOfMotorCars:
+car_trailer_car_mass = TrailerCarMass:
+car_number_of_trailer_cars = NumberOfTrailerCars:
+car_length_of_a_car = LengthOfACar:
+car_front_car_is_motor_car = FrontCarIsMotorCar:
+car_width_of_a_car = WidthOfACar:
+car_height_of_a_car = HeightOfACar:
+car_center_of_gravity_height = CenterOfGravityHeight:
+car_exposed_frontal_area = ExposedFrontalArea:
+car_unexposed_frontal_area = UnexposedFrontalArea:
+car_number_of_trailer_cars_error_message = NumberOfTrailerCars must be at least 1 if FrontCarIsAMotorCar is not set.
+
+device = Device
+device_const_speed = ConstSpeed:
+device_hold_brake = HoldBrake:
+device_readhesion_device = ReAdhesionDevice:
+device_pass_alarm = PassAlarm:
+device_door_open_mode = DoorOpenMode:
+device_door_close_mode = DoorCloseMode:
+device_door_width = DoorWidth:
+device_door_max_tolerance = DoorMaxTolerance:
+device_none = None
+device_manual_switching = Manual switching
+device_automatic_switching = Automatic switching
+device_type_a = Type A (instant)
+device_type_b = Type B (slow)
+device_type_c = Type C (medium)
+device_type_d = Type D (fast)
+device_single = Single
+device_looping = Looping
+device_semi_automatic = Semi-automatic
+device_automatic = Automatic
+device_manual = Manual
+
+acceleration_notch = Notch:
+acceleration_data = Data
+acceleration_preview = Preview
+acceleration_subtract_deceleration = Subtract deceleration due to air and rolling resistance
+acceleration_max_x = Xmax:
+acceleration_max_y = Ymax:
+
+motor_edit = Edit mode
+motor_sound_index = SoundIndex:
+motor_pitch = Pitch
+motor_volume = Volume
+motor_sound_none = None
+
+motor_preview = Preview
+motor_y_pitch = Ypitch
+motor_y_volume = Yvolume
+motor_min_x = Xmin:
+motor_max_x = Xmax:
+motor_left = Left
+motor_right = Right
+motor_in = In
+motor_out = Out
+motor_max_y_pitch = YmaxPitch:
+motor_max_y_volume = YmaxVolume:
+
+extended_note = Please note: Features found on this page may require the following minimum version of openBVE:
+
+extended_loco_brake = Locomotive Brake
+extended_loco_brake_system_type = BrakeType:
+extended_loco_brake_notches = Notches:
+extended_loco_brake_delay_up = DelayUp:
+extended_loco_brake_delay_down = DelayDown:
+extended_loco_brake_type = Type:
+extended_loco_brake_set = Set
+extended_loco_brake_none = Not fitted
+extended_loco_brake_notched_air_brake = Notched air brake
+extended_loco_brake_cl = Air brake with partial release
+extended_loco_brake_combined = Combined
+extended_loco_brake_independant = Independant
+extended_loco_brake_blocking = Blocking
+extended_delay_loco_brake_up = DelayLocoBrakeUp
+extended_delay_loco_brake_down = DelayLocoBrakeDown
+
+extended_misc = Miscellaneous Features
+extended_misc_eb = Handle behaviour on EB:
+extended_misc_eb_no = No Action
+extended_misc_eb_power = Return Power to neutral
+extended_misc_eb_reverser = Return Reverser to neutral
+extended_misc_eb_power_reverser = Return Power & Reverser to neutral
+
+extended_language = Nyelv
