--- a/source/OpenBveApi/OpenBveApi.csproj
+++ b/source/OpenBveApi/OpenBveApi.csproj
@@ -70,6 +70,7 @@
   <ItemGroup>
     <Compile Include="Graphics\Colors.cs">
     </Compile>
+    <Compile Include="Interface\Input\InputDevice.cs" />
     <Compile Include="Interface\Translations\Language.cs" />
     <Compile Include="System\FileSystem.cs" />
     <Compile Include="Graphics\InterpolationModes.cs" />
