--- a/source/InputDevicePlugins/SanYingInput/SanYingInput.csproj
+++ b/source/InputDevicePlugins/SanYingInput/SanYingInput.csproj
@@ -50,7 +50,7 @@
     <Compile Include="ConfigForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ConfigForm.designer.cs">
+    <Compile Include="ConfigForm.Designer.cs">
       <DependentUpon>ConfigForm.cs</DependentUpon>
     </Compile>
     <Compile Include="InputTranslator.cs" />
