New: Display warning message about Input device plugin

--- a/assets/Languages/en-US.cfg
+++ b/assets/Languages/en-US.cfg
@@ -400,6 +400,7 @@ hud_size_large = Large
 transparencyfix = Attempt to fix transparency issues in older content.
 hacks_enable = Enable hacks for buggy older content.
 input_device_plugin = Input Device Plugin
+input_device_plugin_warning = WARNING: If you are turn on the Input Device Plugin(s), it may be happen the conflict of input setting(s).
 input_device_plugin_name = Name
 input_device_plugin_status = Status
 input_device_plugin_status_failure = Failure
