--- a/assets/Languages/ja-JP.cfg
+++ b/assets/Languages/ja-JP.cfg
@@ -401,6 +401,7 @@ hud_size_large = Large
 transparencyfix = Attempt to fix transparency issues in older content.
 hacks_enable = Enable hacks for buggy older content.
 input_device_plugin = 入力デバイスプラグイン
+input_device_plugin_warning = 注意: 入力デバイスプラグインを有効化した場合、本体の入力設定と干渉することがあります。
 input_device_plugin_name = 名称
 input_device_plugin_status = 状態
 input_device_plugin_status_failure = 失敗
