New: Add X file parser using Assimp

--- a/source/ObjectViewer/ObjectViewer.csproj
+++ b/source/ObjectViewer/ObjectViewer.csproj
@@ -80,6 +80,7 @@
     <Compile Include="FunctionScripts.cs" />
     <Compile Include="Hosts.cs" />
     <Compile Include="Options.cs" />
+    <Compile Include="Parsers\AssimpXParser.cs" />
     <Compile Include="Parsers\Ls3DGrpParser.cs" />
     <Compile Include="Parsers\Ls3DObjectParser.cs" />
     <Compile Include="Parsers\MeshBuilder.cs" />
@@ -120,6 +121,10 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AssimpXParser\AssimpXParser.csproj">
+      <Project>{572cd7ff-a0c9-4a48-81b7-79b65e37d3c7}</Project>
+      <Name>AssimpXParser</Name>
+    </ProjectReference>
     <ProjectReference Include="..\OpenBveApi\OpenBveApi.csproj">
       <Project>{27134980-4415-4375-A564-40A9014DFA5F}</Project>
       <Name>OpenBveApi</Name>
