--- a/source/Plugins/Formats.DirectX/Formats.DirectX.csproj
+++ b/source/Plugins/Formats.DirectX/Formats.DirectX.csproj
@@ -34,9 +34,13 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Ionic.Zlib">
+      <HintPath>..\..\..\dependencies\Ionic.Zlib.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MsZip.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Templates.cs" />
