Fix: Correct TGA plugin output path when built from VS

--- a/source/Plugins/Texture.Tga/Texture.Tga.csproj
+++ b/source/Plugins/Texture.Tga/Texture.Tga.csproj
@@ -36,6 +36,9 @@
     <CheckForOverflowUnderflow>False</CheckForOverflowUnderflow>
     <DefineConstants>TRACE</DefineConstants>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+    <OutputPath>..\..\..\bin_debug\Data\Plugins\</OutputPath>
+  </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
   <ItemGroup>
     <Reference Include="System" />
@@ -52,6 +55,7 @@
     <ProjectReference Include="..\..\OpenBveApi\OpenBveApi.csproj">
       <Project>{27134980-4415-4375-a564-40a9014dfa5f}</Project>
       <Name>OpenBveApi</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
 </Project>
